# SyedMCPClient

./: README.md  pyproject.toml  run_agent.py  test_mcp_integration.py
agents/: adapt_retry.py  cognitive_loop.py  planner.py  reflect.py  simple_agent.py
graphs/: main_graph.py
mcp_clients/: base_client.py  registry.py  stock_client.py  weather_client.py
tools/: stock_tools.py  weather_tools.py
